created all frontend files and fixed some backend files